# docs/swagger.yaml
@@ -2,14 +2,8 @@ basePath: /
 definitions:
   models.News:
     properties:
-      category_id:
-        type: integer
-      content:
-        type: string
       created_at:
         type: string
-      id:
-        type: integer
       image:
         type: string
       title:
@@ -29,6 +23,45 @@ info:
   title: NewsFeed API
   version: "1.0"
 paths:
+  /news/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get a single news item by its ID
+      parameters:
+      - description: News ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.News'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get news by ID
+      tags:
+      - news
   /news/comments:
     get:
       consumes:
